--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<h2>Home</h2>
+<h2>Главная</h2>
   {% if session.username %}
-    <h3>Share New Post</h3>
+    <h3>Поделитесь постом</h3>
     <form action="{{ url_for('add_post') }}" method="post">
         <dl>
-            <dt>Title:</dt>
+            <dt>Название:</dt>
             <dd><input type="text" size="30" name="title"></dd>
-            <dt>Tags (separated by commas):</dt>
+            <dt>Тег (separated by commas):</dt>
             <dd><input type="text" size="30" name="tags"></dd>
-            <dt>Text:</dt>
+            <dt>Текст:</dt>
             <dd><textarea name="text" rows="5" cols="40"></textarea></dd>
         </dl>
         <input type="submit" value="Share">
